Debug actionsflow trigger

--- a/workflows/send-webmentions.yml
+++ b/workflows/send-webmentions.yml
@@ -3,6 +3,7 @@ on:
   rss:
     url: http://feeds.jamesmead.org/floehopper-blog
     config:
+      logLevel: debug
       limit: 1
 jobs:
   send_webmentions:
