Debug sending webmentions

--- a/workflows/send-webmentions.yml
+++ b/workflows/send-webmentions.yml
@@ -16,3 +16,4 @@ jobs:
           url: https://webmention.app/check/
           method: 'POST'
           params: '{ "url": "${{on.rss.outputs.link}}", "token": "${{ secrets.WM_TOKEN }}" }'
+          is_debug: true
