--- a/.github/workflows/actionsflow.yml
+++ b/.github/workflows/actionsflow.yml
@@ -3,7 +3,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "0 */1 * * *"
   push:
 jobs:
   run:
