Add timeout to prevent actions running for hours
And using up all my allowance.

c.f. https://github.com/actionsflow/actionsflow-workflow-default/issues/1#issuecomment-766869856

--- a/.github/workflows/actionsflow.yml
+++ b/.github/workflows/actionsflow.yml
@@ -23,6 +23,7 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     name: Run
     steps:
       - uses: actions/checkout@v2
