Change feed URL scheme http -> https

--- a/workflows/send-webmentions.yml
+++ b/workflows/send-webmentions.yml
@@ -1,7 +1,7 @@
 name: Send webmentions for new blog posts
 on:
   rss:
-    url: http://feeds.jamesmead.org/floehopper-blog
+    url: https://feeds.jamesmead.org/floehopper-blog
     config:
       logLevel: debug
       limit: 1
